<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Witaj w FitApp"
        android:textSize="30sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/bmiCalculatorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kalkulator BMI" />
    <Button
        android:id="@+id/dailyKcalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dzienne spożycie kalorii" />
    <Button
        android:id="@+id/recommendedRecipiesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rekomandacje przepisów kulinarnych" />

    <Button
        android:id="@+id/bmiChartButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Wykres bmi w czasie" />


</LinearLayout>